--- a/styles/header.css
+++ b/styles/header.css
@@ -54,6 +54,49 @@
     text-transform: uppercase;
 }
 
-.container__botao{
+.container__botao {
     display: none;
+}
+
+
+.container__titulo,
+.opções {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .container__titulo,
+    .container__titulo--negrito {
+        font-family: var(--fonte-secundaria);
+        font-size: 30px;
+    }
+
+    .container__titulo {
+        display: block;
+        font-weight: 400;
+    }
+
+    .container__titulo--negrito {
+        font-weight: 700;
+    }
+
+    .opções {
+        display: flex;
+    }
+
+    .opções__item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opções__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .container__imagem-transparente,
+    .cabeçalho_menu-hamburguer {
+        display: none;
+    }
 }
