--- a/styles/banner.css
+++ b/styles/banner.css
@@ -33,3 +33,18 @@
     background: url("../img/Pesquisa.svg") no-repeat;
     background-position: 0.5em;
 }
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo{
+        font-size: 36px;
+    }
+
+    .banner__pesquisa{
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder{
+        font-size: 16px;
+        background-position: 4em;
+    }
+}
