--- a/styles/contato.css
+++ b/styles/contato.css
@@ -35,3 +35,24 @@
     background: url("../img_figma/Email.svg") no-repeat;
     padding-left: 2.5em;
 }
+
+@media screen and (min-width: 1024px) {
+    .contato {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato__titulo {
+        font-size: 24px;
+    }
+
+    .contato__descrição {
+        margin-right: 1.5em;
+        width: 30%;
+    }
+
+    .contato__email {
+        width: 30%;
+    }
+}
