--- a/styles/header.css
+++ b/styles/header.css
@@ -99,4 +99,13 @@
     .cabeçalho_menu-hamburguer {
         display: none;
     }
+
+    .opções__botão:checked~.lista-menu {
+        display: block;
+        width: auto;
+    }
+    
+    .opções__botão{
+        display: none;
+    }
 }
