--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -4,27 +4,37 @@
     padding: 1em 0;
 }
 
-.tópicos__titulo{
+.tópicos__titulo {
     color: var(--branco);
     font-weight: 300;
     margin: 0.5em 0 1.5em 0;
 }
 
-.tópicos__lista{
+.tópicos__lista {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.tópicos__item{
+.tópicos__item {
     margin: 1.5em 0.5em;
 }
 
-.tópicos__link{
+.tópicos__link {
     color: var(--branco);
     padding: 1em;
     background-color: var(--laranja);
     text-decoration: none;
     font-size: 14px;
     font-weight: 700;
+}
+
+@media screen and (min-width: 1024px) {
+    .tópicos__titulo {
+        font-size: 24px;
+    }
+
+    .tópicos__link {
+        font-size: 24px;
+    }
 }
