--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,3 +6,44 @@ hr {
     background-color: var(--branco);
     padding: 1em;
 }
+
+.lista-rodapé {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .lista-rodapé {
+        display: block;
+    }
+
+    .rodapé {
+        display: flex;
+        justify-content: space-around;
+        padding: 2.5em;
+    }
+
+    .rodapé__titulo {
+        font-size: 24px;
+
+    }
+
+    .lista-rodapé__titulo {
+        color: var(--cinza-claro);
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    .lista-rodapé__item {
+        display: flex;
+        align-items: center;
+        margin: 1.5em 0;
+    }
+
+    .lista-rodapé__link {
+        text-decoration: none;
+        color: var(--cinza);
+        font-size: 14px;
+        margin-left: 0.6em;
+    }
+
+}
