Add: Iniciando layout para desktop 1728px

--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -34,6 +34,10 @@
         font-size: 24px;
     }
 
+    .tópicos__item {
+        display: flex;
+    }
+
     .tópicos__link {
         font-size: 24px;
     }
