--- a/styles/header.css
+++ b/styles/header.css
@@ -60,7 +60,8 @@
 
 
 .container__titulo,
-.opções {
+.opções,
+.container__texto {
     display: none;
 }
 
@@ -104,8 +105,29 @@
         display: block;
         width: auto;
     }
-    
-    .opções__botão{
+
+    .opções__botão {
         display: none;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .container__texto {
+        display: block;
+    }
+
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .cabeçalho {
+        padding: 0 2em;
+    }
+
+    .opções {
+        margin-right: auto;
     }
 }
