--- a/styles/banner.css
+++ b/styles/banner.css
@@ -35,16 +35,31 @@
 }
 
 @media screen and (min-width: 1024px) {
-    .banner__titulo{
+    .banner__titulo {
         font-size: 36px;
     }
 
-    .banner__pesquisa{
+    .banner__pesquisa {
         width: 50%;
     }
 
-    .banner__pesquisa::placeholder{
+    .banner__pesquisa::placeholder {
         font-size: 16px;
         background-position: 4em;
     }
+}
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa {
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+
+    .banner{
+        padding: 5em 0;
+    }
+
 }
