--- a/styles/footer.css
+++ b/styles/footer.css
@@ -47,3 +47,10 @@ hr {
     }
 
 }
+
+@media screen and (min-width: 1728px) {
+    .lista-rodapé {
+        border-left: 1px solid var(--cinza-claro);
+        padding: 1.5em 0 0 1em;
+    }    
+}
