--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -42,3 +42,9 @@
         font-size: 24px;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .tópicos{
+        padding: 3em 30vw;
+    }    
+}
