--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,14 @@
     display: inline-block;
 }
 
+.container__botao:checked~.container__rotulo>.cabeçalho_menu-hamburguer {
+    background-image: url("../img_figma/menu_black_24dp\ 1.svg");
+}
+
+.container__botao:checked~.container__rotulo {
+    background: var(--azul-degrade);
+}
+
 .cabeçalho {
     background-color: var(--branco);
     display: flex;
@@ -108,6 +116,24 @@
 
     .opções__botão {
         display: none;
+    }
+
+    .opções__botão:checked~ .opções__rotulo> .opções__item {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .opções__item{
+        padding: 0.5em 0.8em 2.5em 0.8em;
+    }
+
+    .lista-menu__item:hover{
+        background: var(--azul-degrade);
+    }
+
+    .lista-menu__item:hover > .lista-menu__link{
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
     }
 }
 
