--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -29,6 +29,11 @@
     font-weight: 700;
 }
 
+.tópicos__link:hover {
+    color: var(--laranja);
+    background-color: var(--branco);
+}
+
 @media screen and (min-width: 1024px) {
     .tópicos__titulo {
         font-size: 24px;
@@ -44,7 +49,7 @@
 }
 
 @media screen and (min-width: 1728px) {
-    .tópicos{
+    .tópicos {
         padding: 3em 30vw;
-    }    
+    }
 }
